[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Yogesh C Gowda <yogesh.gowda@brainlabsdigital.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
